src/parser/snapshots/monkey_language_server__parser__test__mixed_err.snap
---
source: src/parser/test.rs
description: "let foo;\n[1 2, 3];"
expression: result
---
[
    Err(ExpectedTokenNotFound("SyntaxError: Expected '=' not found."), (0,7)->(0,8)),
    Array {
        token: Token(LBracket, "[", (1,0)->(1,1)),
        elems: Ok(
            [
                Ok(
                    Int {
                        token: Token(Int, "1", (1,1)->(1,2)),
                        value: 1,
                    },
                ),
                Err(
                    Err(ExpectedTokenNotFound("SyntaxError: Expected ',' not found."), (1,3)->(1,4)),
                ),
            ],
        ),
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 1,
                character: 8,
            },
        },
    },
]

===================================

let foo;
       ^ [Error] SyntaxError: Expected '=' not found.
[1 2, 3];
   ^ [Error] SyntaxError: Expected ',' not found.
